--- a/packages/eslint-config-ccs/package.json
+++ b/packages/eslint-config-ccs/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eslint-config-airbnb",
+  "name": "eslint-config-ccs",
   "version": "19.0.4",
-  "description": "Airbnb's ESLint config, following our styleguide",
+  "description": "CCS's ESLint config, following our styleguide, forked from Airbnb",
   "main": "index.js",
   "exports": {
     ".": "./index.js",
@@ -24,19 +24,21 @@
     "pretest": "npm run --silent lint",
     "test": "npm run --silent tests-only",
     "link:eslint": "cd node_modules/eslint && npm link --production && cd -",
-    "pretravis": "npm run link:eslint && cd ../eslint-config-airbnb-base && npm link --no-save eslint && npm install && npm link && cd - && npm link --no-save eslint-config-airbnb-base",
+    "pretravis": "npm run link:eslint && cd ../eslint-config-ccs-base && npm link --no-save eslint && npm install && npm link && cd - && npm link --no-save eslint-config-ccs-base",
     "travis": "npm run --silent tests-only",
-    "posttravis": "npm unlink --no-save eslint-config-airbnb-base eslint >/dev/null &"
+    "posttravis": "npm unlink --no-save eslint-config-ccs-base eslint >/dev/null &"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/airbnb/javascript"
+    "url": "https://github.com/childhoodcancersociety/ecmascript"
   },
   "keywords": [
     "eslint",
     "eslintconfig",
     "config",
     "airbnb",
+    "ccs",
+    "childhood cancer society",
     "javascript",
     "styleguide",
     "es2015",
@@ -64,9 +66,9 @@
   "bugs": {
     "url": "https://github.com/airbnb/javascript/issues"
   },
-  "homepage": "https://github.com/airbnb/javascript",
+  "homepage": "https://github.com/childhoodcancersociety/ecmascript",
   "dependencies": {
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-ccs-base": "^15.0.0",
     "object.entries": "^1.1.5"
   },
   "devDependencies": {
