--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
-  "name": "airbnb-style",
+  "name": "ccs-style",
   "version": "2.0.0",
-  "description": "A mostly reasonable approach to JavaScript.",
+  "description": "A mostly reasonable approach to ECMAScript.",
   "scripts": {
     "preinstall": "npm run install:config && npm run install:config:base",
     "postinstall": "rm -rf node_modules/markdownlint-cli/node_modules/markdownlint",
-    "install:config": "cd packages/eslint-config-airbnb && npm prune && npm install",
-    "install:config:base": "cd packages/eslint-config-airbnb-base && npm prune && npm install",
+    "install:config": "cd packages/eslint-config-ccs && npm prune && npm install",
+    "install:config:base": "cd packages/eslint-config-ccs-base && npm prune && npm install",
     "lint": "markdownlint --config linters/.markdownlint.json README.md */README.md",
     "pretest": "npm run --silent lint",
     "test": "npm run --silent test:config && npm run --silent test:config:base",
-    "test:config": "cd packages/eslint-config-airbnb; npm test",
-    "test:config:base": "cd packages/eslint-config-airbnb-base; npm test",
+    "test:config": "cd packages/eslint-config-ccs; npm test",
+    "test:config:base": "cd packages/eslint-config-ccs-base; npm test",
     "pretravis": "npm run --silent lint",
     "travis": "npm run --silent travis:config && npm run --silent travis:config:base",
-    "travis:config": "cd packages/eslint-config-airbnb; npm run travis",
-    "travis:config:base": "cd packages/eslint-config-airbnb-base; npm run travis"
+    "travis:config": "cd packages/eslint-config-ccs; npm run travis",
+    "travis:config:base": "cd packages/eslint-config-ccs-base; npm run travis"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/airbnb/javascript.git"
+    "url": "https://github.com/childhoodcancersociety/ecmascript.git"
   },
   "keywords": [
     "style guide",
     "lint",
     "airbnb",
+    "ccs",
+    "childhood cancer society",
     "es6",
     "es2015",
     "es2016",
     "es2017",
     "es2018",
+    "ecmascript",
     "react",
     "jsx"
   ],
-  "author": "Harrison Shoff <hi@hshoff.com> (https://twitter.com/hshoff)",
+  "author": "Childhood Cancer Society <webdev@childhoodcancersociety.org>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/airbnb/javascript/issues"
+    "url": "https://github.com/childhoodcancersociety/ecmascript/issues"
   },
-  "homepage": "https://github.com/airbnb/javascript",
+  "homepage": "https://github.com/childhoodcancersociety/ecmascript",
   "devDependencies": {
     "markdownlint": "^0.26.2",
     "markdownlint-cli": "^0.32.2"
