--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -28,11 +28,11 @@ jobs:
           - 8
           - 7
         package:
-          - eslint-config-ccs-base
+          - eslint-config-airbnb-base
         exclude:
           - node-version: 10
             eslint: 8
-            package: eslint-config-ccs-base
+            package: eslint-config-airbnb-base
 
     defaults:
       run:
@@ -65,7 +65,7 @@ jobs:
           - 8
           - 7
         package:
-          - eslint-config-ccs
+          - eslint-config-airbnb
         react-hooks:
           - 4
 
@@ -99,7 +99,7 @@ jobs:
           - 8
           - 7
         package:
-          - eslint-config-ccs-base
+          - eslint-config-airbnb-base
 
     defaults:
       run:
@@ -130,7 +130,7 @@ jobs:
           - 8
           - 7
         package:
-          - eslint-config-ccs
+          - eslint-config-airbnb
         react-hooks:
           - 4
 
