--- a/packages/eslint-config-airbnb-base/package.json
+++ b/packages/eslint-config-airbnb-base/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eslint-config-ccs-base",
+  "name": "eslint-config-airbnb-base",
   "version": "15.0.0",
-  "description": "CCS's base JS ESLint config, following our styleguide, forked from Airbnb.",
+  "description": "Airbnb's base JS ESLint config, following our styleguide",
   "main": "index.js",
   "exports": {
     ".": "./index.js",
@@ -39,8 +39,6 @@
     "eslintconfig",
     "config",
     "airbnb",
-    "ccs",
-    "childhood cancer society",
     "javascript",
     "styleguide",
     "es2015",
