--- a/linters/.jshintrc
+++ b/linters/.jshintrc
@@ -34,14 +34,14 @@
   // Prohibit use of a variable before it is defined.
   "latedef": true,
 
-  // Enforce line length to 160 characters
-  "maxlen": 160,
+  // Enforce line length to 80 characters
+  "maxlen": 80,
 
   // Require capitalized names for constructor functions.
   "newcap": true,
 
-  // Enforce use of single quotation marks for strings.
-  "quotmark": "single",
+  // Enforce use of double quotation marks for strings.
+  "quotmark": "double",
 
   // Enforce placing 'use strict' at the top function scope
   "strict": true,
