--- a/packages/eslint-config-ccs/package.json
+++ b/packages/eslint-config-ccs/package.json
@@ -1,34 +1,33 @@
 {
-  "name": "eslint-config-airbnb-base",
-  "version": "15.0.0",
-  "description": "Airbnb's base JS ESLint config, following our styleguide",
+  "name": "eslint-config-ccs",
+  "version": "1.0.0",
+  "description": "Childhood Cancer Society's ESLint config, following our styleguide",
   "main": "index.js",
   "exports": {
     ".": "./index.js",
-    "./legacy": "./legacy.js",
+    "./base": "./base.js",
+    "./hooks": "./hooks.js",
     "./whitespace": "./whitespace.js",
-    "./rules/best-practices": "./rules/best-practices.js",
-    "./rules/es6": "./rules/es6.js",
-    "./rules/node": "./rules/node.js",
-    "./rules/style": "./rules/style.js",
-    "./rules/errors": "./rules/errors.js",
-    "./rules/imports": "./rules/imports.js",
-    "./rules/strict": "./rules/strict.js",
-    "./rules/variables": "./rules/variables.js",
+    "./rules/react": "./rules/react.js",
+    "./rules/react-a11y": "./rules/react-a11y.js",
+    "./rules/react-hooks": "./rules/react-hooks.js",
+    "./typescript": "./typescript.js",
+    "./prettier": "./prettier.js",
     "./package.json": "./package.json"
   },
   "scripts": {
     "prelint": "eclint check $(git ls-files | xargs find 2> /dev/null | grep -vE 'node_modules|\\.git')",
-    "lint": "eslint --report-unused-disable-directives .",
+    "lint": "eslint .",
     "pretests-only": "node ./test/requires",
     "tests-only": "babel-tape-runner ./test/test-*.js",
     "prepublishOnly": "eslint-find-rules --unused && npm test && safe-publish-latest",
     "prepublish": "not-in-publish || npm run prepublishOnly",
     "pretest": "npm run --silent lint",
     "test": "npm run --silent tests-only",
-    "pretravis": ":",
+    "link:eslint": "cd node_modules/eslint && npm link --production && cd -",
+    "pretravis": "npm run link:eslint && cd ../eslint-config-airbnb-base && npm link --no-save eslint && npm install && npm link && cd - && npm link --no-save eslint-config-airbnb-base",
     "travis": "npm run --silent tests-only",
-    "posttravis": ":"
+    "posttravis": "npm unlink --no-save eslint-config-airbnb-base eslint >/dev/null &"
   },
   "repository": {
     "type": "git",
@@ -40,7 +39,9 @@
     "config",
     "airbnb",
     "javascript",
+    "typescript",
     "styleguide",
+    "prettier",
     "es2015",
     "es2016",
     "es2017",
@@ -60,34 +61,51 @@
     {
       "name": "Harrison Shoff",
       "url": "https://twitter.com/hshoff"
+    },
+    {
+      "name": "Ibrahim Saberi",
+      "url": "https://ibrahimsaberi.com"
     }
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/airbnb/javascript/issues"
+    "url": "https://github.com/airbnb/ecmascript/issues"
   },
-  "homepage": "https://github.com/airbnb/javascript",
+  "homepage": "https://github.com/ChildhoodCancerSociety/ecmascript",
+  "dependencies": {
+    "eslint-config-airbnb-base": "^15.0.0",
+    "object.entries": "^1.1.5"
+  },
   "devDependencies": {
     "@babel/runtime": "^7.20.13",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "babel-preset-airbnb": "^4.5.0",
     "babel-tape-runner": "^3.0.0",
     "eclint": "^2.8.1",
     "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-find-rules": "^4.1.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "in-publish": "^2.0.1",
+    "prettier": "^2.8.7",
+    "react": ">= 0.13.0",
     "safe-publish-latest": "^2.0.0",
     "tape": "^5.6.3"
   },
   "peerDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "engines": {
-    "node": "^10.12.0 || >=12.0.0"
-  },
-  "dependencies": {
-    "confusing-browser-globals": "^1.0.11",
-    "object.entries": "^1.1.5"
+    "node": "^10.12.0 || ^12.22.0 || ^14.17.0 || >=16.0.0"
   }
 }
