--- a/packages/eslint-config-ccs/package.json
+++ b/packages/eslint-config-ccs/package.json
@@ -24,10 +24,7 @@
     "prepublish": "not-in-publish || npm run prepublishOnly",
     "pretest": "npm run --silent lint",
     "test": "npm run --silent tests-only",
-    "link:eslint": "cd node_modules/eslint && npm link --production && cd -",
-    "pretravis": "npm run link:eslint && cd ../eslint-config-airbnb-base && npm link --no-save eslint && npm install && npm link && cd - && npm link --no-save eslint-config-airbnb-base",
-    "travis": "npm run --silent tests-only",
-    "posttravis": "npm unlink --no-save eslint-config-airbnb-base eslint >/dev/null &"
+    "link:eslint": "cd node_modules/eslint && npm link --production && cd -"
   },
   "repository": {
     "type": "git",
