--- a/packages/eslint-config-ccs/package.json
+++ b/packages/eslint-config-ccs/package.json
@@ -98,6 +98,7 @@
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -106,6 +107,6 @@
     "prettier": "^2.8.7"
   },
   "engines": {
-    "node": "^10.12.0 || ^12.22.0 || ^14.17.0 || >=16.0.0"
+    "node": "^14.17.0 || >=16.0.0"
   }
 }
